<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_xml"
    android:angle="45">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:text="@string/Tickly"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:textColor="#fafafa"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/text2"
        android:text="@string/sign_up_below_and_create_your"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textColor="#fafafa" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text3"
        android:text="@string/free"
        android:textStyle="bold"
        android:textColor="#fafafa"
        android:layout_marginStart="140dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text4"
            android:text="@string/account"
            android:textColor="#fafafa"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/first_name"
        android:textColor="#e0e0e0"
        android:inputType="text"
        android:background="@drawable/rounded_edit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/last_name"
        android:textColor="#fafafa"
        android:inputType="text"
        android:background="@drawable/rounded_edit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email_address"
        android:textColor="#fafafa"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/set_a_password"
        android:textColor="#fafafa"
        android:inputType="numberPassword"
        android:background="@drawable/rounded_edit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPanel"
        android:text="@string/create_account"
        android:background="@drawable/round_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text5"
            android:text="@string/or_sign_up_with"
            android:textColor="#f5f5f5"
            android:textAlignment="center"
            android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPanel2"
            android:background="@drawable/ic_google_plus"
            android:layout_marginEnd="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPanel3"
            android:background="@drawable/ic_facebook"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:id="@+id/text6"
        android:textColor="#f5f5f5"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text7"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="#f5f5f5"/>

    </LinearLayout>


</LinearLayout>